<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AdriProject</string>
    <string name="LoginButton">Login</string>
    <string name="RegisterButton">Register</string>
    <string name="NotLoggedButton">Proceed without logging in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="UsernameLogInput">Username</string>
    <string name="Password">Password</string>
    <string name="COLLECTION">COLLECTION</string>
    <string name="newIn">NEW IN</string>
    <string name="womanButton">WOMAN</string>
    <string name="manButton">MAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Suits">SUITS</string>
    <string name="Tops">TOPS</string>
    <string name="Dresses">DRESSES</string>
    <string name="Coats_Jackets">COATS / JACKETS</string>
    <string name="Tracksuits">TRACKSUITS</string>
    <string name="Bottoms">BOTTOMS</string>
    <string name="Jumpsuits">JUMPSUITS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation_drawer_open" translatable="false" />
    <string name="navigation_drawer_close" translatable="false" />
    <string name="gmailInput">Gmail</string>
    <string name="repeatPass">Repeat Password</string>
    <string name="SnackloginError">Credenciales incorrectas o usuario no existente</string>
    <string name="SnackRegisterError">Passwords do not match or forbidden data.</string>
    <string name="Account">Account</string>
    <string name="LogOut">Log out</string>
    <string name="helpQst">Help / Questions</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="AccUserTxt">Username   -></string>
    <string name="AccEmailTxt">Email   -></string>
    <string name="AccPassTxt">Password   -></string>
    <string name="AccText1">Personal Information</string>
    <string name="AccText2">Notification preferences</string>
    <string name="buyButton">BUY</string>
    <string name="cancelBuyBtn">CANCEL</string>

</resources>