<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WomanFragment">


    <TextView
        android:id="@+id/textView"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/womanButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/womanMenuBottom"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bottoms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <Button
        android:id="@+id/womanMenuJumpsuit"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Jumpsuits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <Button
        android:id="@+id/womanMenuCoatsJackets"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Coats_Jackets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/womanMenuTops"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tops"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/womanMenuDresses"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dresses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

</androidx.constraintlayout.widget.ConstraintLayout>