<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManFragment"
    android:id="@+id/manFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manButton"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <Button
        android:id="@+id/manMenuBottom"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bottoms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <Button
        android:id="@+id/manMenuTracksuits"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tracksuits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581" />

    <Button
        android:id="@+id/manMenuCoatsJackets"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Coats_Jackets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/manMenuTops"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tops"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/manMenuSuits"
        style="@style/appStyleButtonFont_BLACK_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Suits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

</androidx.constraintlayout.widget.ConstraintLayout>